==> EdgeTX/edgetx/radio/src/targets/common/arm/stm32/sdio_sd.cpp <==
#include "stm32_hal_ll.h"
#include "stm32_hal.h"
#include "hal.h"
#include "debug.h"
#include "delays_driver.h"
#include "sdio_sd.h"
#define SD_DATATIMEOUT                  ((uint32_t)1000000)

void SD_LowLevel_Init(void)
{
  LL_GPIO_InitTypeDef  GPIO_InitStructure;
  LL_GPIO_StructInit(&GPIO_InitStructure);

  /* Configure PC.08, PC.09, PC.10, PC.11 pins: D0, D1, D2, D3 pins */
  GPIO_InitStructure.Pin = LL_GPIO_PIN_8 | LL_GPIO_PIN_9 | LL_GPIO_PIN_10 | LL_GPIO_PIN_11;
  GPIO_InitStructure.Speed = LL_GPIO_SPEED_FREQ_VERY_HIGH;
  GPIO_InitStructure.Mode = LL_GPIO_MODE_ALTERNATE;
  GPIO_InitStructure.OutputType = LL_GPIO_OUTPUT_PUSHPULL;
  GPIO_InitStructure.Pull = LL_GPIO_PULL_UP;
  GPIO_InitStructure.Alternate = LL_GPIO_AF_12; // SDIO
  LL_GPIO_Init(GPIOC, &GPIO_InitStructure);

  /* Configure PD.02 CMD line */
  GPIO_InitStructure.Pin = LL_GPIO_PIN_2;
  LL_GPIO_Init(GPIOD, &GPIO_InitStructure);

  /* Configure PC.12 pin: CLK pin */
  GPIO_InitStructure.Pin = LL_GPIO_PIN_12;
  GPIO_InitStructure.Pull = LL_GPIO_PULL_NO;
  LL_GPIO_Init(GPIOC, &GPIO_InitStructure);

  /* Enable the SDIO APB2 Clock */
  __HAL_RCC_SDIO_CLK_ENABLE();

  // SDIO Interrupt ENABLE
  NVIC_SetPriority(SDIO_IRQn, 0);
  NVIC_EnableIRQ(SDIO_IRQn);
  // DMA2 STREAMx Interrupt ENABLE
  NVIC_SetPriority(SD_SDIO_DMA_IRQn, 1);
  NVIC_EnableIRQ(SD_SDIO_DMA_IRQn);

}

SD_Error SD_Init(void)
{
  __IO SD_Error errorstatus = SD_OK;

  /* SDIO Peripheral Low Level Init */
  SD_LowLevel_Init();

  /*!< Configure the SDIO peripheral */
  /*!< SDIO_CK = SDIOCLK / (SDIO_TRANSFER_CLK_DIV + 2) */
  /*!< on STM32F4xx devices, SDIOCLK is fixed to 48MHz */
  sdio.Instance = SDIO;
  sdio.Init.ClockEdge = SDIO_CLOCK_EDGE_RISING;
  sdio.Init.ClockPowerSave = SDIO_CLOCK_POWER_SAVE_DISABLE;
  sdio.Init.BusWide = SDIO_BUS_WIDE_1B;
  sdio.Init.HardwareFlowControl = SDIO_HARDWARE_FLOW_CONTROL_DISABLE;
  sdio.Init.ClockDiv = SD_SDIO_TRANSFER_CLK_DIV;
  HAL_SD_DeInit(&sdio);

  HAL_SD_Init(&sdio);


  HAL_StatusTypeDef halStatus = HAL_SD_InitCard(&sdio);
  if (halStatus != HAL_OK) {
    TRACE("SD_PowerON() status=%d", halStatus);
    /*!< CMD Response TimeOut (wait for CMDSENT flag) */
    return SD_ERROR;
  }

  HAL_SD_CardInfoTypeDef cardInfo;
  HAL_StatusTypeDef es = HAL_SD_GetCardInfo(&sdio, &cardInfo);
  if(es != HAL_OK)
    return SD_ERROR;
  HAL_SD_ConfigWideBusOperation(&sdio, SDIO_BUS_WIDE_4B);

  return errorstatus;
}

uint8_t SD_Detect(void)
{
  __IO uint8_t status = SD_PRESENT;

  /*!< Check GPIO to detect SD */
  if ((LL_GPIO_ReadInputPort(SD_PRESENT_GPIO) & SD_PRESENT_LL_GPIO_PIN) == 0) {
    status = SD_NOT_PRESENT;
  }

  return status;
}
